syntax = "proto3";

package onight.zjfae.afront.gensazj.v2;
option java_outer_classname="Login";

//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_login{
	//

	string mobile = 1; //,手机号,String,不校验,是,

	string needValidateAuthCode = 6; //,是否需要校验验证码 0-否，1-是,String,不校验,否,

	string fundAccount = 7;//资金账号,String,不校验,是

}

message Ret_PBAPP_login{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_login data=3;


}

message REQ_PBAPP_login{
	//

	string username = 1; //,用户名,String,不校验,否,

	string password = 2; //,密码,String,不校验,否,

	string loginType = 3; //,登陆渠道,String,不校验,否,

	string authCode = 4; //,验证码,String,不校验,否,

	string loginMethod = 5; //,登录方式 0-密码登录，1-手势登录，2-指纹登录,String,不校验,否,

	string needValidateAuthCode = 6; //,是否需要校验验证码 0-否，1-是,String,不校验,否,

	string gessturePwd = 7; //,手势密码,String,不校验,是,

	string isOpenGpwd = 8; //,是否开启手势密码,String,不校验,是,

	string longitude = 9; //,GPS用户位置信息经度

	string latitude = 10; //,GPS用户位置信息纬度

	string routingAddress = 11; //,路由地址

	string phoneNum = 12; //,当前用户手机号

	string getStatus = 13; //,手机号获取状态,1，获取成功，2，不能获取，3，获取失败

	string locationInfo = 14;//,用户登录详细地址,String,不校验,否

	string privacyFlag=15;//,隐私权限认证标识, true:同意入库，false：不同意，不入库

	string agressTime =16;//同意时间：yyyy-MM-dd HH:mm:ss

}